DOCS : 시퀀스 다이어그램 작성

--- a/docs/0.architecture/02-1.Sequence.md
+++ b/docs/0.architecture/02-1.Sequence.md
@@ -1,7 +1,15 @@
 # e-커머스 상품 주문 서비스
 
 
-## 문서 목록
+**📚 문서 목록**
+
++ [1️⃣ 요구사항 분석 문서](00.Requirements.md)
++ [2️⃣ 마일스톤 문서](01.Milestones.md)
++ 3️⃣ 다이어그램 문서
+  + [시퀀스 다이어그램 문서](02-1.SequenceDiagram.md)
+  + [상태 다이어그램 문서](02-2.StateDiagram.md)
++ [4️⃣ ERD 문서](03.ERD.md)
++ [5️⃣ API 명세](04.ApiDocument.md)
 
 ## 목차
 1. [잔고](#잔고balance)
